# roms-curator

./: .gitignore  Cargo.toml  LICENSE  README.md  logging.yaml
.github/workflows/: build.yml  ci.yml  test.yml
benches/: categorize_roms_bench.rs  copy_roms_bench.rs  utils.rs
docs/: app-run-instructions.md  build-instructions.md  faq.md  lib-usage-instructions.md  qa.md  run-instructions.md
src/: lib.rs  main.rs  utils.rs
src/core/: args.rs  args_test.rs  mod.rs  roms_service.rs  roms_service_test.rs
src/models/: config.rs  config_test.rs  destination_folders.rs  mod.rs  report.rs  roms.rs
tests/: integration_tests.rs  lib_it.rs  main_it.rs  utils.rs
tests/resources/: catver_0244.ini  listxml_0244.xml  working_arcade_0244.ini
