[package]
name = "roms-curator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "..."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# xml
roxmltree = "0.15"
#roxmltree = { git = "https://github.com/RazrFalcon/roxmltree.git" }
# logging
log = "0.4"
log4rs = "1.1"
# utilities
strum = "0.24"
strum_macros = "0.24"
rand = "0.8"
chrono = "0.4"
# zip
zip = "0.6"
# lazy
lazy_static = "1.4"

#backtrace-on-stack-overflow = "0.2.0"
stack-sizes = "0.5.0"
