[package]
name = "roms-curator"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
description = "Helper utility to manage Sets of ROMs. Currently only works for MAME ROMs."
authors = ["Hugo Tigre"]
readme = "README.md"
homepage = "https://github.com/HugoTigre/roms-curator"
repository = "https://github.com/HugoTigre/roms-curator"
keywords = ["roms", "mame"]
categories = ["command-line-utilities"]
exclude = [".github/", "tests/", "docs/", ".gitignore", ".editorconfig"]

[dependencies]
# xml
roxmltree = "0.18"
# logging
log = "0.4"
log4rs = "1.2"
# utilities
strum = "0.24"
strum_macros = "0.24"
rand = "0.8"
chrono = "0.4"
# zip
zip = "0.6"
# lazy
lazy_static = "1.4"
