[package]
name = "roms-curator"
version = "0.1.5"
edition = "2021"
license-file = "LICENSE"
description = "Helper utility to manage Sets of ROMs. Currently only works for MAME ROMs."
authors = ["Hugo Tigre"]
readme = "README.md"
homepage = "https://github.com/HugoTigre/roms-curator"
repository = "https://github.com/HugoTigre/roms-curator"
keywords = ["roms", "mame"]
categories = ["command-line-utilities"]
exclude = [".github/", "tests/", "docs/", ".gitignore", ".editorconfig"]

[dependencies]
# logging
log = "0.4"
log4rs = "1.2"
# xml
roxmltree = "0.19"
# utilities
strum = "0.26"
strum_macros = "0.25"
rand = "0.8"
chrono = "0.4"
clap = { version = "4.1", features = ["cargo"] } # arguments
indicatif = { version = "0.17", features = ["rayon"] } # progress bar
zip = "0.6"
lazy_static = "1.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.5.1", features = ["html_reports"] } # benchmarks

[profile.bench]
debug = true

[[bench]]
name = "categorize_roms_bench"
harness = false
[[bench]]
name = "copy_roms_bench"
harness = false
